    - Integrator, can now also be created without the default velocity and position
      properites.
    - Facility to add entity types to specific properties in the integrator.
    - Integrator.setup_component written - yet to be tested.
    - identifier and category added as class attributes to components.
    - Function to setup a given entity with required properties by the component
      manager.

Sunday 08 November 2009 (04:58:54 AM)
    - Integrator base class complete with tests.
    - more tests added for component manager.
    - tests for functions in Integrator.
    - partile property access mode changed/corrected in component manager. Two
      components of the same type can now be added to the component manager. But
      two different components having conflicting requirements cannot be added.
    - SPH function for simple density computation added.

Mon Nov  9 18:57:21 IST 2009
    - function to align LocalReal particles to the begining of the a particle
      array added.

Tue Nov 10 15:39:51 IST 2009
    - tests updated to reflect above change in particle alignment.
    - get functions modified to get both real and all particles.
    - by default only real particles returned, when properties are accessed 
      as attributes.
    - setting of given carray with smaller sized numpy array made possible to
      incorporate setting values for only real particles.
    
Thursday 12 November 2009 (10:01:26 PM)
    - renamed/refactored add_component function from integrated to
      add_pre_step_components, add_post_step_component,
      add_pre_integration_component, add_post_integration_component. Now 
      functions names are a bit more clear.
    - convenience function "integrate" added to integraor class.
    - accessor/modifier functions to set various meta-information for
      components.
    - convenience inline function to generate Point class from given arrays.
    - density component class added - not complete
    