@@ -1,0 +1,7 @@
+"""
+Extension to the dictionary class to access keys as attributes.
+"""
+cdef class AttrDict:
+    """
+    """
+    cdef public dict _dict
